[tool.poetry]
name = "tow-slack-plog"
version = "0.1.0"
description = ""
authors = ["Fhuad Balogun <fhuadbalogun@gmail.com>"]
readme = "README.md"
packages = [{include = "tow_slack_plog"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
